force-app/main/default/objects/Giganet_Connect_Bolt_On__mdt/Giganet_Connect_Bolt_On__mdt.object-meta.xml
<CustomObject>
    <label>Giganet Connect Bolt On</label>
    <pluralLabel>Giganet Connect Bolt Ons</pluralLabel>
</CustomObject>