force-app/main/default/objects/Giganet_Connect_Bolt_On__mdt/fields/Bolt_On_Name__c.field-meta.xml
<CustomField>
    <fullName>Bolt_On_Name__c</fullName>
    <label>Bolt On Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>