force-app/main/default/objects/Giganet_Connect_Bolt_On__mdt/fields/Install_Amount__c.field-meta.xml
<CustomField>
    <fullName>Install_Amount__c</fullName>
    <label>Install Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>